--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@inertiajs/vue3": "^2.0.9",
         "@vitejs/plugin-vue": "^5.2.4",
+        "@vuepic/vue-datepicker": "^11.0.2",
         "admin-lte": "3.2",
         "chart.js": "^4.4.0",
         "vue": "^3.5.13"
