--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/csv": "^9.23",
+        "spatie/laravel-permission": "^6.18",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
