--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@vuepic/vue-datepicker": "^11.0.2",
         "admin-lte": "3.2",
         "chart.js": "^4.4.0",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
